Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
   display: inline-block;
   padding: 12px 40px;
-  border-radius: 50px;
+  border-radius: 5px;
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
